# PolyDepth

./: CMakeLists.txt  README.md  packages.txt
PolyDepth/include/: ClearConfiguration.h  MeshObject.h  PolyDepth.h
PolyDepth/src/: MeshObject.cpp  PolyDepth.cpp
demo/include/: main.h  model.h
demo/src/: main.cpp  model.cpp  stopwatch.cpp
